<resources>
    <string name="app_name">DeliveryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_back_into_your_account">Log back into your account</string>
    <string name="user_id">User ID</string>
    <string name="log_in">Log in</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="choose_your_preferred_language">Choose Your Preferred Language</string>
    <string name="arabic">العربية</string>
    <string name="arabic_en">Arabic</string>
    <string name="english">English</string>
    <string name="apply">Apply</string>
    <string name="status">Status</string>
    <string name="total_price">Total price</string>
    <string name="date">Date</string>
    <string name="order_details">Order Details ></string>
    <string name="filter">Filter</string>
    <string name="order_date">Order Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cancel">Cancel</string>
    <string name="Delivered">Delivered</string>
    <string name="Delivering">Delivering</string>
    <string name="Returned">Returned</string>
    <string name="password">Password</string>
</resources>