<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="15dp"
        android:layout_marginBottom="15dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_Welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/welcome_back"
                android:textColor="@color/purple_500"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_logBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/log_back_into_your_account"
                android:textColor="@color/purple_500"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_Welcome" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:padding="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_logBack">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_UserId"
                    android:layout_width="342dp"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_editext_login"
                    android:gravity="center"
                    android:hint="@string/user_id"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent=".95" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_Password"
                    android:layout_width="342dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_editext_login"
                    android:gravity="center"
                    android:hint="Password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_UserId"
                    app:layout_constraintWidth_percent=".95" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="342dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:text="@string/log_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/bg_button_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_Password"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/layout_login"
                app:layout_constraintEnd_toEndOf="@+id/layout_login"
                app:layout_constraintStart_toStartOf="@+id/layout_login"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_ordersdelv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_circle"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_lang"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_language"
                app:layout_constraintBottom_toBottomOf="@+id/iv_circle"
                app:layout_constraintEnd_toEndOf="@+id/iv_circle"
                app:layout_constraintTop_toTopOf="@+id/iv_circle" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_backgroundimage"
                android:layout_width="wrap_content"
                android:layout_height="168.26dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_backgrondimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_login"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_car"
                android:layout_width="177.93dp"
                android:layout_height="168.26dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_car"
                app:layout_constraintEnd_toEndOf="@+id/iv_backgroundimage"
                app:layout_constraintStart_toStartOf="@+id/iv_backgroundimage"
                app:layout_constraintBottom_toBottomOf="@+id/iv_backgroundimage"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>