<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="binditemorder"
            type="com.example.deliveryapp.model.orders.DeliveryBill" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layput_services"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_details"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                app:layout_constraintEnd_toStartOf="@+id/layout_ordersDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_ordersSerial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@{binditemorder.BILLSRL}"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="222222222"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/status"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ordersSerial" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/status"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="30dp"
                    android:background="@color/dark_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_status"
                    app:layout_constraintStart_toEndOf="@+id/tv_status"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_Totalprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/total_price"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ordersSerial" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price"
                    android:layout_width="57dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:textColor="@color/purple_700"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_Totalprice"
                    app:layout_constraintEnd_toEndOf="@+id/tv_Totalprice"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status"
                    app:layout_constraintBottom_toBottomOf="parent"

                    />
                <ImageView
                    android:id="@+id/imageViewTP"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/dark_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_status"
                    app:layout_constraintStart_toEndOf="@+id/tv_Totalprice"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/date"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/imageViewTP"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ordersSerial" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@{binditemorder.BILLDATE}"
                    android:textColor="@color/purple_700"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_Date"
                    app:layout_constraintEnd_toEndOf="@+id/tv_Date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_ordersDetails"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/green"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_oredersDetails"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/order_details"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>